# Stock-Trend-Prediction

./: .gitignore  README.md  Stock Trend Prediction.ipynb  app.py  global_stock_tickers_with_india - Sheet1.csv  global_stock_tickers_with_india - Sheet1.json  global_stock_tickers_with_india.xlsx  my_model.keras  pyproject.toml  requirements.txt  tickers.py  vercel.json
