[tool.poetry]
name = "stock-trend-prediction"
version = "0.1.0"
description = "A Streamlit app for stock trend prediction using LSTM."
authors = ["Vedant Lokhande <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
yfinance = "^0.2.20"
streamlit = "^1.26.0"
tensorflow = "==2.7.0"
scikit-learn = "^1.2.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
